# LimitedPanelAPI

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  开发计划.md
config/: README.md  config.example.yaml  defSet.yaml
docs/: config.md  games.md  proxy-enhancement.md  v2-实施清单.md  webui-api.md  开发计划.md  重构计划.md
rust/limitedpanel-rs/: Cargo.toml
rust/limitedpanel-rs/src/: enka_fetch.rs  main.rs  probe_pool.rs  sub_parse.rs
scripts/: proxy-load-test.js  qa-flow.js  reliability-test.js  subscription-prefetch.js
src/: bootstrap.ts  cli.js  cli.ts  config.js  main.js  main.ts  server.js  server.ts  start-main.js  start-main.ts  start.js  start.ts  user-config.js  user-config.ts
src/db/: proxy.js  proxy.ts  sqlite.js  sqlite.ts
src/enka/: gs.js  headers.ts  sr.js  zzz.js
src/meta/: gs.js  gs.ts  sr.js  sr.ts  sync.js  sync.ts
src/miao/: Format.ts  index.js
src/preset/: generate.js  generate.ts
src/proxy/: mihomo-core.js  mihomo-core.ts  mihomo.js  mihomo.ts  pool.js  pool.ts  subscription.js  subscription.ts  v2ray-core.js  v2ray-core.ts  v2ray.js  v2ray.ts
src/runtime/: scanner.ts  state.ts
src/rust/: runner.js
src/samples/: collect-playerdata.js  collect-playerdata.ts  collect.js  collect.ts  daily-gate.js  daily-gate.ts
src/score/: calc.js  gs.js  gs.ts  sr.js  sr.ts  zzz.js  zzz.ts
src/scripts/: copy-assets.ts  proxy-load-test.ts  qa-flow.ts  reliability-test.ts  subscription-prefetch.ts
src/ui/: index.html
src/utils/: exec.js  exec.ts  fs.js  log.js  log.ts
src/verify/: liangshi.js  preset.js  preset.ts
(+5 files in other folders)
