[package]
name = "limitedpanel-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.27", features = ["derive"] }
fastrand = "2.1.0"
percent-encoding = "2.3.1"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "time", "io-std", "io-util"] }
url = "2.5.4"
